# brik

./: Cargo.toml  README.md
.github/workflows/: rust.yml
LICENSES/: Apache-2.0.txt  BSD-2-Clause.txt  NCSA.txt
examples/: basic.rs  countdown.rs  custom_logue.rs  factorial.rs
src/: asm.rs  lib.rs  reloc.rs  rv32.rs  rv64.rs
src/asm/: arch.rs  asm.rs  errors.rs  label.rs  mod.rs
src/misc_enc/: leb128.rs  mod.rs  pseudo.rs
src/util/: attr_builder.rs  compat_fn.rs  diag.rs  into_bytes.rs  misc.rs  mod.rs  opcode.rs  rv64.rs
