[package]
name = "brik"
version = "0.1.0"
edition = "2021"
authors = ["Mark Tyrkba <marktyrkba456@gmail.com>"]
rust-version = "1.68.2"

[dependencies]
brik_rv32  = { version = "0.2.2",   default-features = false }
# brik_rv32  = { path = "../brik_rv32/",   default-features = false }
brik_rv64  = { version = "0.1.2",   default-features = false }
# brik_rv64  = { path = "../brik_rv64/",   default-features = false }
smallvec   = { version = "1.15.1",  default-features = false }
thiserror  = { version = "2.0",     default-features = false }
bytecount  = { version = "0.6.9",   default-features = false }
memchr     = { version = "2.7.5",   default-features = false }
paste      = { version = "1.0.15",  default-features = false }
num-traits = { version = "=0.2.19", default-features = false }
anyhow     = { version = "1.0.99",  default-features = false }
rustc-hash = { version = "2.1.1",   default-features = false, features = ["std"]   }
object     = { version = "~0.37.3", default-features = false, features = ["write"] }
miette     = { version = "7.6.0",   default-features = false, features = ["fancy"], optional = true }

[features]
default = []
# default = ["std", "fancy-diagnostics"]

fancy-diagnostics = ["miette/fancy", "std"]

std = [
    "rustc-hash/std",
    "memchr/std",
    "num-traits/std",
    "anyhow/std",
    "object/std",
    "object/write_std"
]

elf     = ["object/elf"]
coff    = ["object/coff"]
macho   = ["object/macho"]
pe      = ["object/pe"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "countdown"
path = "examples/countdown.rs"

[[example]]
name = "factorial"
path = "examples/factorial.rs"

[[example]]
name = "custom_logue"
path = "examples/custom_logue.rs"
